# tma

./: .gitignore  AGENTS.md  LICENSE  README.md  SOLUTION_OVERVIEW.md
.codex/environments/: environment-2.toml  environment.toml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  local-dev.docker-compose.yml  main.py  pyproject.toml
backend/benchmark/: README.md  run.py
backend/benchmark/manifests/: demo_manifest.json  eggsupgrill.json  jp2_manifest.json
backend/benchmark/output/20260207T125417Z_eggsupgrill-batch/: run_config.json  summary.csv  summary.json
backend/benchmark/output/20260207T125417Z_eggsupgrill-batch/cases/eggsupgrill/: case_report.json
backend/benchmark/output/20260207T133929Z_eggsupgrill-batch/: run_config.json  summary.csv  summary.json
backend/benchmark/output/20260207T133929Z_eggsupgrill-batch/cases/eggsupgrill/: case_report.json  ocr_lines.json
backend/scripts/src/api/: run_upload.py
backend/scripts/src/services/ocr/: benchmark_grouping_modes.py  fixture_dip_results.json  run_build_paragraph.py
backend/src/: main.py  models.py
backend/src/api/: __init__.py  debug.py  deps.py  menu.py  root.py  user.py
backend/src/core/: config.py  security.py  vendor.py
backend/src/core/vendors/fatsecret/: client.py  oauth.py  token_storage.py
backend/src/core/vendors/supabase/: client.py
backend/src/core/vendors/utilities/: client.py
backend/src/menu_engine/: __init__.py  analysis.py  contracts.py  recommendations.py
backend/src/services/: exceptions.py  menu.py  user.py  utils.py
backend/src/services/ocr/: build_paragraph.py  layout_grouping_experiment.py  line_grouping.py  llm_utlities.py  models.py
backend/src/test/: test_config.py  test_dish.py  test_menu.py  test_upload_dip.py  test_upload_ocr.py  test_user.py
backend/src/test/fixtures/: __init__.py  dip_results.json  get_user.py
backend/src/tests/: conftest.py
backend/src/tests/feature/: test_debug_benchmark_api_e2e.py  test_menu_analyze_e2e.py  test_menu_recommendations_e2e.py
backend/src/tests/unit/: test_build_paragraph_unit.py  test_deps_unit.py  test_layout_grouping_experiment_unit.py  test_line_grouping_unit.py  test_menu_engine_unit.py  test_menu_pipeline_unit.py  test_menu_service_unit.py  test_utils_openai_unit.py
backend/test-data/: test1-bbox-results.json
docs/: readme-header.md
frontend/: .env.example  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/public/: demoData.json  demoDataCN.json  demoDataEN.json
frontend/scripts/: capture-demo-output.mjs
frontend/src/: App.1.tsx  App.tsx  global.d.ts  globals.css  main.tsx  vite-env.d.ts
infrastructure/tf-docker/: main.tf  outputs.tf  variables.tf
scripts/: generate-readme.sh
(+110 files in other folders)
