[tool.poetry]
name = "tma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
openai = "^1.28.1"
python-jose = "^3.3.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
langchain = "^0.1.20"
langchain-openai = "^0.1.7"
langchain-community = "^0.0.38"
wikipedia = "^1.4.0"
notebook = "^7.2.0"
wikibase-rest-api-client = "^0.1.3"
mediawikiapi = "^1.2"
supabase = "^2.5.0"
postgrest = "^0.16.9"
ujson = "^5.10.0"
gunicorn = "^22.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
asynctest = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
