[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"

openai = "^1.41.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
wikipedia = "^1.4.0"
wikibase-rest-api-client = "^0.1.3"
mediawikiapi = "^1.2"
supabase = "^2.10.0"
postgrest = "^0.18.0"
ujson = "^5.10.0"
gunicorn = "^23.0.0"
opencv-python-headless = "^4.10.0.84"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.4"
notebook = "^7.2.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.25.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
