[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "requests>=2.31.0",
    "openai>=1.69.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.13",
    "wikipedia>=1.4.0",
    "wikibase-rest-api-client>=0.1.3",
    "mediawikiapi>=1.2",
    "supabase>=2.10.0",
    "postgrest>=0.18.0",
    "ujson>=5.10.0",
    "opencv-python-headless>=4.11.0.86",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
]



[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.25.0",
    "asynctest>=0.13.0",
]
lint = [
    "ruff>=0.8.4",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
